[package]
name = "vt3"
version = "0.4.0"
authors = ["Marirs <marirs@gmail.com>"]
description = "VirusTotal REST API v3 (Public & Enterprise)"
keywords = ["virustotal", "api", "v3"]
categories = ["api-bindings"]
repository = "https://github.com/marirs/marirs/vt3-rs"
readme = "README.md"
license-file = "LICENSE"
exclude = ["examples", "data"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.3", features = ["blocking", "multipart"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"

[features]
enterprise = []

[lib]
name = "vt3"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "marirs/vt3-rs" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
