[package]
name = "vt3"
version = "0.7.0"
authors = ["Marirs <marirs@gmail.com>"]
description = "VirusTotal REST API v3 (Public & Enterprise)"
keywords = ["virustotal", "api", "v3"]
categories = ["api-bindings"]
repository = "https://github.com/marirs/marirs/vt3-rs"
readme = "README.md"
license-public_api.file = "LICENSE"
exclude = ["examples", "data"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
base64 = "0.13.0"
bzip2 = { version = "0.4.3", optional = true }
reqwest = { version = "0.11.3", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"

[features]
enterprise = []
feeds = ["bzip2"]
hunting = []
all = ["enterprise", "feeds", "hunting"]

[lib]
name = "vt3"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "marirs/vt3-rs" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true

[[example]]
name = "user_info"
path= "examples/enterprise/user_info.rs"
required-features = ["enterprise"]

[[example]]
name = "api_usage"
path= "examples/enterprise/api_usage.rs"
required-features = ["enterprise"]

[[example]]
name = "overall_quotas"
path= "examples/enterprise/overall_quotas.rs"
required-features = ["enterprise"]

[[example]]
name = "group_info"
path= "examples/enterprise/group_info.rs"
required-features = ["enterprise"]

[[example]]
name = "group_members"
path= "examples/enterprise/group_members.rs"
required-features = ["enterprise"]

[[example]]
name = "group_api_usage"
path= "examples/enterprise/group_api_usage.rs"
required-features = ["enterprise"]

[[example]]
name = "retrohunt_jobs"
path= "examples/hunting/retrohunt_jobs.rs"
required-features = ["hunting"]

[[example]]
name = "livehunt_get_rulesets"
path= "examples/hunting/livehunt_get_rulesets.rs"
required-features = ["hunting"]
